# douban-exporter-lite

./: .gitignore  Pipfile  README.md  douban_book.py  douban_movie.py  douban_music.py  fabfile.py  requirements.txt  setup.cfg  setup.py  worker.py
douban_exporter_lite/: douban_book.py  douban_exporter.py  douban_movie.py  douban_music.py  misc.py
notebooks/: book_export_details.ipynb  get_max_index_details.ipynb
