[global]
quiet = 1

[metadata]
name = douban-exporter-lite
description = "A lightweight and faster douban data exporter" 
author = Yifan Wu
version = 1.0.0

[options]
zip_safe = True
packages = find:
include_package_data = True
install_requires =
    beautifulsoup4==4.6.0
    requests==2.21.0
    xlwings==0.11.4
    lxml==4.3.4
    XlsxWriter==0.9.8

setup_requires = pytest-runner; wheel
tests_require =
    pytest
    pytest-cov

[aliases]
test = pytest
release = clean --all bdist_wheel

[tool:pytest]
addopts = --verbose -s -p no:warnings --cov-report term-missing --cov "douban_exporter_lite"
testpaths = tests
