[global]
quiet = 1

[metadata]
name = douban-exporter-lite
description = "A lightweight and faster douban data exporter" 
author = Yifan Wu
version = 1.0.0

[options]
zip_safe = True
packages = find:
include_package_data = True
install_requires =
    beautifulsoup4==4.6.0
    requests==2.21.0
    xlwings==0.11.4
    lxml==4.3.4
    XlsxWriter==0.9.8


[aliases]
release = clean --all bdist_wheel

